[package]
name = "async-ioutil"
version = "0.1.0"
edition = "2021"
description = "A collection of Rust asynchronous I/O utilities"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["io", "utility"]
categories = ["asynchronous"]
repository = "https://github.com/candyc1oud/ioutils"
authors = ["Candy Cloud <candyc1oud@outlook.com>"]
documentation = "https://docs.rs/async-ioutil"

[dependencies]
futures = "0.3.24"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
